CRUD document terminé avec interface